--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
     "crypto-js": "^3.1.9-1",
+    "js-base64": "^3.6.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
