--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/admob": "^11.2.0",
-    "@react-native-firebase/app": "^11.2.0",
+    "@react-native-firebase/app": "^11.3.3",
+    "@react-native-firebase/messaging": "^11.3.3",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
@@ -22,6 +23,7 @@
     "react-native": "0.64.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-permissions": "^3.0.1",
+    "react-native-push-notification": "^7.2.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
