--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -3,3 +3,4 @@ include ':react-native-aes-kit'
 project(':react-native-aes-kit').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-aes-kit/android')
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
+include ':unity-ads'
