--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "js-base64": "^3.6.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-fbads": "^7.0.5",
+    "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-permissions": "^3.0.1",
     "react-native-push-notification": "^7.2.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.1",
+    "react-native-unity-ads-moon": "^0.1.17",
     "react-native-webview": "^11.4.0"
   },
   "devDependencies": {
